--- a/scripts/scRNAseq/6_figure5_plots.Rmd
+++ b/scripts/scRNAseq/6_figure5_plots.Rmd
@@ -21,6 +21,7 @@ require(rstatix, quietly = T) #adding p values to plots
 require(ggprism, quietly = T) #adding p values to plots
 require(ggsci, quietly = T) #IGV color palette
 require(ComplexUpset)
+require(tidyr)
 require(patchwork, quietly = T) #adding p values to plots
 require(magrittr, quietly = T) #adding p values to plots
 require(gridExtra, quietly = T) #display multiple plots
@@ -143,7 +144,7 @@ p_pan8_shared <- pan8@meta.data %>%
                   theme(axis.title = element_blank(),
                         axis.text = element_blank(),
                         panel.grid = element_blank(),
-                        text = element_text(size = 15),
+                        text = element_blank(),
                         legend.position = "none") +
                   labs(color = "Pancreas matching (PM)",
                        title = "CD8+ T cells in pancreas") +
@@ -151,7 +152,7 @@ p_pan8_shared <- pan8@meta.data %>%
                   guides(color = guide_legend(override.aes = list(alpha = 1, 
                                                                 size = 5, 
                                                                 shape = 19))) +
-                  facet_wrap(~ treatment, ncol = 1)
+                  facet_wrap(~ treatment, ncol =3)
 
 p_pan4_shared <- pan4@meta.data %>% 
                   filter(!is.na(pancreas_matching)) %>%
@@ -168,16 +169,81 @@ p_pan4_shared <- pan4@meta.data %>%
                   theme(axis.title = element_blank(),
                         axis.text = element_blank(),
                         panel.grid = element_blank(),
-                        text = element_text(size = 15),
+                        text =  element_blank(),
                         legend.position = "none") +
-                  labs(color = "Pancreas matching (PM)",
-                       title = "CD4+ T cells in pancreas") +
+                  labs(color = NULL,
+                       title = NULL) +
                   scale_color_manual(values = custom_colors("pm")) +
                   guides(color = guide_legend(override.aes = list(alpha = 1, 
                                                                 size = 5, 
                                                                 shape = 19))) +
-                  facet_wrap(~ treatment, ncol = 1)
-grid.arrange(p_pan8_shared, p_pan4_shared, ncol = 2)
+                  facet_wrap(~ treatment, ncol = 3)
+
+p_cd8_panonly_cluster <- pan8@meta.data %>% 
+                            ggplot(aes(x = UMAP_1, 
+                                     y = UMAP_2, 
+                                     color = seurat_clusters)) + 
+                            geom_point(shape = 16, 
+                                       alpha = 0.6) +
+                            theme_minimal() +
+                            theme(axis.title = element_blank(),
+                                  axis.text = element_blank(),
+                                  text =  element_blank(),
+                                  panel.grid = element_blank(),
+                                  legend.position = "none") +
+                            labs(x = 'UMAP 1', 
+                                 y = 'UMAP 2', 
+                                 color = NULL,
+                                 size = NULL) +
+                            scale_alpha_continuous(range = c(0.4,1)) +
+                            scale_size_continuous(range = c(1,3)) +
+                            # geom_label_repel(data = pan8_cls, #change depending on Seurat used
+                            #      mapping = aes(x = U1,
+                            #                    y = U2, 
+                            #                    label = seurat_clusters), 
+                            #      size = 5, 
+                            #      min.segment.length = Inf, 
+                            #      show.legend = FALSE) +
+                            guides(color = guide_legend(override.aes = list(alpha=1, 
+                                                                          size=5, 
+                                                                          shape=19)), 
+                                   size = guide_legend()) +
+                            scale_color_manual(values = custom_colors("clusters"),
+                                               limits = force) #drops unused clusters in legend
+
+p_cd4_panonly_cluster <- pan4@meta.data %>% 
+                            ggplot(aes(x = UMAP_1, 
+                                     y = UMAP_2, 
+                                     color = seurat_clusters)) + 
+                            geom_point(shape = 16, 
+                                       alpha = 0.6) +
+                            theme_minimal() +
+                            theme(axis.title = element_blank(),
+                                  axis.text = element_blank(),
+                                  text = element_text(size = 15),
+                                  panel.grid = element_blank(),
+                                  legend.position = "none") +
+                            labs(x = 'UMAP 1', 
+                                 y = 'UMAP 2', 
+                                 color = "Seurat clusters",
+                                 size = "Size of clonotype\n(pancreas only)") +
+                            scale_alpha_continuous(range = c(0.4,1)) +
+                            scale_size_continuous(range = c(1,3)) +
+                            # geom_label_repel(data = pan8_cls, #change depending on Seurat used
+                            #      mapping = aes(x = U1,
+                            #                    y = U2, 
+                            #                    label = seurat_clusters), 
+                            #      size = 5, 
+                            #      min.segment.length = Inf, 
+                            #      show.legend = FALSE) +
+                            guides(color = guide_legend(override.aes = list(alpha=1, 
+                                                                          size=5, 
+                                                                          shape=19)), 
+                                   size = guide_legend()) +
+                            scale_color_manual(values = custom_colors("clusters"),
+                                               limits = force) #drops unused clusters in legend
+
+grid.arrange(p_cd8_panonly_cluster, p_pan8_shared, p_cd4_panonly_cluster, p_pan4_shared, ncol = 2, widths = c(1,3))
 
 #STACKED BAR PLOT OF SHARED/NON-SHARED
 p_shared_per_cluster <- seurat_integrated@meta.data %>% 
@@ -221,8 +287,8 @@ rbind(pan4@meta.data %>%
              color = treatment, 
              fill = treatment, 
              y = ratio)) + 
-    geom_boxplot(position = position_dodge(0.8),alpha=0.4) + 
-    geom_point(position = position_dodge(0.8),size=4) + 
+    geom_violin(alpha=0.4, adjust = 0.8, scale = "width", draw_quantiles = 0.5) + 
+    geom_point(size=4) + 
     theme_minimal() +
     theme(panel.grid = element_blank(),
           panel.border = element_rect(color= "black", fill =NA, size=0.5),
@@ -239,7 +305,23 @@ rbind(pan4@meta.data %>%
 Show the top 120 clonotypes shared across all three tissues to look at patterns in seurat clusters.
 ```{r top 100 clonotype seurat clusters shared across tissues}
 seurat_integrated@meta.data %>% 
-  filter(clonotype_id %in% paste0("clonotype",c(1:120)) & 
+  filter(clonotype_id %in% paste0("clonotype",c(2:70)) & 
+           clonotype_tissue_groups == "pLN&blood&pancreas" & 
+           celltype == "CD8") %>% 
+  group_by(clonotype_id, treatment, tissue, seurat_clusters) %>% 
+  tally() %>% 
+  ggplot(aes(x=tissue, fill = seurat_clusters, y = n)) + 
+  geom_bar(stat="identity", position = "fill") + 
+  facet_wrap(treatment~clonotype_id) + 
+  scale_fill_manual(values = custom_colors("clusters")) + 
+  theme_minimal() + 
+  theme(legend.position = "none", 
+        panel.grid = element_blank(), 
+        axis.text = element_blank(), 
+        axis.title = element_blank())
+
+seurat_integrated@meta.data %>% 
+  filter(clonotype_id %in% paste0("clonotype",c(2:70)) & 
            clonotype_tissue_groups == "pLN&blood&pancreas" & 
            celltype == "CD8") %>% 
   group_by(clonotype_id, treatment, tissue, seurat_clusters) %>% 
@@ -249,13 +331,14 @@ seurat_integrated@meta.data %>%
   facet_wrap(treatment~clonotype_id) + 
   scale_fill_manual(values = custom_colors("clusters")) + 
   theme_minimal() + 
+  scale_y_continuous(trans = "log10") +
   theme(legend.position = "none", 
         panel.grid = element_blank(), 
         axis.text = element_blank(), 
         axis.title = element_blank())
 
 clonotypes_of_interest <- c(paste0("clonotype", c(1,7,18,26,28,31,32,35)), paste0("clonotype", c(3,5,10,12,13,14,17,20)), paste0("clonotype", c(4,6,9,30,54,90,96,105)))
-clonotypes_of_interest <- paste0("clonotype", c(7,3,4))
+clonotypes_of_interest <- paste0("clonotype", c(3,4,7))
 
 p_topshared_clonotypes <- seurat_integrated@meta.data %>% 
                             filter(clonotype_id %in% clonotypes_of_interest) %>%
@@ -264,12 +347,13 @@ p_topshared_clonotypes <- seurat_integrated@meta.data %>%
                                           seurat_clusters,
                                           allcells_UMAP_1, 
                                           allcells_UMAP_2) %>% 
+                            group_by(seurat_clusters) %>% 
+                            mutate(U1 = mean(allcells_UMAP_1),
+                                   U2 = mean(allcells_UMAP_2)) %>%
                             group_by(treatment,
                                      clonotype_id, 
-                                     seurat_clusters) %>% 
-                            summarise(U1 = mean(allcells_UMAP_1),
-                                      U2 = mean(allcells_UMAP_2),
-                                      num_cells = n(),
+                                     seurat_clusters, U1, U2) %>% 
+                            summarise(num_cells = n(),
                                       .groups = "keep") %>% 
                             ggplot() +
                             geom_point(data = seurat_integrated@meta.data %>%
@@ -288,17 +372,17 @@ p_topshared_clonotypes <- seurat_integrated@meta.data %>%
                             theme(axis.title = element_blank(),
                                   axis.text = element_blank(),
                                   panel.grid = element_blank(),
-                                  text = element_text(size = 15),
+                                  text = element_blank(),
                                   legend.position = "none") +
                             labs(color = NULL) +
                             scale_color_manual(values = custom_colors("clusters")) +
-                            scale_size_continuous(range = c(3,10)) +
+                            scale_size_continuous(range = c(5,20)) +
                             guides(color = guide_legend(override.aes = list(alpha = 1, 
                                                                             size = 5, 
                                                                             shape = 19))) +
                             facet_wrap(treatment ~ clonotype_id, ncol = 9) +
-                            geom_text(aes(x = U1, y = U2, label = num_cells), color = "white", size = 3, fontface = "bold")
-
+                            geom_text(aes(x = U1, y = U2, label = num_cells), color = "white", size = 6, fontface = "bold")
+p_topshared_clonotypes
 
 #stacked bar plots of shared clusters in blood and pancreas
 seurat_integrated@meta.data %>% 
@@ -374,6 +458,74 @@ merge(clonos_of_interest, seurat_integrated@meta.data %>%
                 label = num_cells), 
             color = "white")
 
+```
+
+```{r stacked bar plots of terminally exhausted CD8+ T cells}
+eff_clonos <- seurat_integrated@meta.data %>% 
+                filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas" & celltype == "CD8" & seurat_clusters == "CD8_eff") %>%
+                pull(clonotype_id) %>% 
+                unique()
+mem_clonos <- seurat_integrated@meta.data %>% 
+                filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas" & celltype == "CD8" & seurat_clusters == "CD8_mem") %>%
+                pull(clonotype_id) %>% 
+                unique()
+texh_clonos <- seurat_integrated@meta.data %>% 
+                filter(tissue == "pancreas" & clonotype_tissue_groups == "pLN&blood&pancreas" & celltype == "CD8" & seurat_clusters == "CD8_texh") %>%
+                pull(clonotype_id) %>% 
+                unique()
+
+p1 <- seurat_integrated@meta.data %>% 
+  filter(clonotype_id %in% mem_clonos) %>% 
+  group_by(tissue,seurat_clusters) %>% 
+  tally() %>% 
+  ggplot(aes(x=tissue, 
+             y = n, 
+             fill = seurat_clusters)) + 
+  geom_bar(stat="identity", 
+           position = "fill") + 
+  theme_minimal() +
+  theme(panel.grid = element_blank(),
+        text = element_text(size = 10),
+        axis.title.x = element_blank(),
+        panel.spacing.x = unit(0, "cm"),
+        legend.position = "none") +
+  scale_fill_manual(values = custom_colors("clusters"))
+
+p2 <- seurat_integrated@meta.data %>% 
+  filter(clonotype_id %in% eff_clonos) %>% 
+  group_by(tissue,seurat_clusters) %>% 
+  tally() %>% 
+  ggplot(aes(x=tissue, 
+             y = n, 
+             fill = seurat_clusters)) + 
+  geom_bar(stat="identity", 
+           position = "fill") + 
+  theme_minimal() +
+  theme(panel.grid = element_blank(),
+        text = element_text(size = 10),
+        axis.title.x = element_blank(),
+        panel.spacing.x = unit(0, "cm"),
+        legend.position = "none") +
+  scale_fill_manual(values = custom_colors("clusters"))
+
+p3 <- seurat_integrated@meta.data %>% 
+  filter(clonotype_id %in% texh_clonos) %>% 
+  group_by(tissue,seurat_clusters) %>% 
+  tally() %>% 
+  ggplot(aes(x=tissue, 
+             y = n, 
+             fill = seurat_clusters)) + 
+  geom_bar(stat="identity", 
+           position = "fill") + 
+  theme_minimal() +
+  theme(panel.grid = element_blank(),
+        text = element_text(size = 10),
+        axis.title.x = element_blank(),
+        panel.spacing.x = unit(0, "cm"),
+        legend.position = "none") +
+  scale_fill_manual(values = custom_colors("clusters"))
+
+grid.arrange(p1,p2,p3, nrow = 1)
 ```
 
 
@@ -1090,29 +1242,47 @@ seurat_integrated@meta.data %>%
     head(20)
 
 p_tcon_treg_shared_example_clonotypes <- seurat_integrated@meta.data %>% 
-                                  filter(clonotype_id %in% paste0("clonotype",c(59,68,65,86,87))) %>% #these clonotypes are the largest with more than 3 Tregs
-                                  ggplot(aes(x = allcells_UMAP_1, 
-                                           y = allcells_UMAP_2, 
-                                           color = seurat_clusters)) + 
-                                  geom_point(data = seurat_integrated@meta.data %>%
-                                               dplyr::select(-clonotype_celltype_groups), 
-                                               shape = 16,
-                                               color = "grey90") +
-                                  geom_point(shape = 16) +
-                                  theme_minimal() +
-                                  theme(axis.title = element_blank(),
-                                        axis.text = element_blank(),
-                                        strip.text = element_blank(),
-                                        text = element_text(size = 15),
-                                        panel.grid = element_blank(),
-                                        legend.position = "none") +
-                                  labs(x = 'UMAP 1', 
-                                       y = 'UMAP 2', 
-                                       color = "Seurat clusters",
-                                       size = "Size of clonotype\n(pancreas only)") +
-                                  facet_wrap(~ celltype) +
-                                  scale_color_manual(values = custom_colors("clusters"),
-                                                     limits = force) #drops unused clusters in legend
+                            filter(clonotype_id %in% paste0("clonotype",c(59,68,65,86,87))) %>%
+                            dplyr::select(treatment,
+                                          clonotype_id, 
+                                          seurat_clusters,
+                                          allcells_UMAP_1, 
+                                          allcells_UMAP_2) %>% 
+                            group_by(treatment,
+                                     clonotype_id, 
+                                     seurat_clusters) %>% 
+                            summarise(U1 = mean(allcells_UMAP_1),
+                                      U2 = mean(allcells_UMAP_2),
+                                      num_cells = n(),
+                                      .groups = "keep") %>% 
+                            ggplot() +
+                            geom_point(data = seurat_integrated@meta.data %>%
+                                         dplyr::select(-treatment) %>%
+                                         dplyr::select(-clonotype_id),
+                                       aes(x = allcells_UMAP_1, 
+                                           y = allcells_UMAP_2),
+                                       shape = 16,
+                                       color = "grey90") +
+                            geom_point(aes(x = U1,
+                                           y = U2,
+                                           size = num_cells,
+                                           color = seurat_clusters),
+                                       shape = 16) +
+                            theme_minimal() +
+                            theme(axis.title = element_blank(),
+                                  axis.text = element_blank(),
+                                  panel.grid = element_blank(),
+                                  text = element_text(size = 15),
+                                  legend.position = "none") +
+                            labs(color = NULL) +
+                            scale_color_manual(values = custom_colors("clusters")) +
+                            scale_size_continuous(range = c(3,10)) +
+                            guides(color = guide_legend(override.aes = list(alpha = 1, 
+                                                                            size = 5, 
+                                                                            shape = 19))) +
+                            facet_wrap(treatment ~ clonotype_id, ncol = 9) +
+                            geom_text(aes(x = U1, y = U2, label = num_cells), color = "white", size = 3, fontface = "bold")
+
 p_tcon_treg_shared_example_clonotypes
 ```
 
