--- a/scripts/scRNAseq/2_figure1_plots.Rmd
+++ b/scripts/scRNAseq/2_figure1_plots.Rmd
@@ -81,13 +81,14 @@ p_treatment <- seurat_integrated@meta.data %>%
                            y = allcells_UMAP_2, 
                            color = treatment)) + 
                 geom_point(shape = 16, 
-                           alpha = 0.8) +
+                           alpha = 0.8,
+                           size = 1) +
                 theme_minimal() +
                 theme(axis.title = element_blank(),
                       axis.text = element_blank(),
                       panel.grid = element_blank(),
                       text = element_text(size = 15),
-                      legend.position = c(0.1,0.1)) +
+                      legend.position = "none") +
                 labs(color= NULL,
                      title = NULL) +
                 guides(color = guide_legend(override.aes = list(alpha = 1, 
@@ -107,7 +108,7 @@ p_tissues <- seurat_integrated@meta.data %>%
                     axis.text = element_blank(),
                     panel.grid = element_blank(),
                     text = element_text(size = 15),
-                    legend.position = c(0.1,0.1)) +
+                    legend.position = "none") +
               labs(color= NULL,
                    title = NULL) +
               guides(color = guide_legend(override.aes = list(alpha = 1, 
@@ -127,7 +128,7 @@ p_tetramer <- seurat_integrated@meta.data %>%
                       axis.text = element_blank(),
                       panel.grid = element_blank(),
                       text = element_text(size = 15),
-                      legend.position = c(0.1,0.1)) +
+                      legend.position = "none") +
                 labs(color = NULL,
                      title = "All T cells: NRP-v7 tetramer positive") +
                 guides(color = guide_legend(override.aes = list(alpha = 1, 
@@ -147,7 +148,7 @@ p_celltypes <- seurat_integrated@meta.data %>%
                       axis.text = element_blank(),
                       panel.grid = element_blank(),
                       text = element_text(size = 15),
-                      legend.position = c(0.1,0.1)) +
+                      legend.position = "none") +
                 labs(color= NULL,
                      title = NULL) +
                 guides(color = guide_legend(override.aes = list(alpha = 1, 
@@ -167,7 +168,7 @@ p_expansion <- seurat_integrated@meta.data %>%
                       axis.text = element_blank(),
                       panel.grid = element_blank(),
                       text = element_text(size = 15),
-                      legend.position = c(0.2, 0.1),
+                      legend.position = "none",
                       legend.key.height = unit(0.25,"cm")) +
                 labs(color= NULL,
                      title = NULL) +
@@ -184,6 +185,7 @@ p_coinh <- seurat_integrated@meta.data %>%
             theme(axis.title = element_blank(),
                   axis.text = element_blank(),
                   panel.grid = element_blank(),
+                  legend.position = "none",
                   text = element_text(size = 15)) +
             labs(color= NULL,
                  title = NULL) +
@@ -192,10 +194,10 @@ p_coinh <- seurat_integrated@meta.data %>%
                                                           shape = 19))) +
             scale_color_gradient(low = "bisque", high = "darkslategray")
 
-p_prog <- seurat_integrated@meta.data %>% 
-            ggplot(aes(x = allcells_UMAP_1, 
-                       y = allcells_UMAP_2, 
-                       color = Miller2019_progenitor_exh1)) + 
+p_prog <- seurat_integrated@meta.data %>%
+            ggplot(aes(x = allcells_UMAP_1,
+                       y = allcells_UMAP_2,
+                       color = Miller2019_progenitor_exh1)) +
             geom_point(shape = 16) +
             theme_minimal() +
             theme(axis.title = element_blank(),
@@ -248,7 +250,7 @@ p_tox <- seurat_integrated@meta.data %>%
     guides(color = guide_colorbar(ticks = F)) #removes ticks from colorbar
 
 
-grid.arrange(p_tissues, p_treatment, p_celltypes, p_expansion, p_tox, p_coinh, p_prog, p_term, ncol = 2)
+grid.arrange(p_celltypes, p_tox, p_coinh, p_term, p_expansion, p_tissues, p_treatment,   ncol = 2)
 ```
 
 Plot some critical markers of T cells used to identify cell subsets:
